..F....... [DEV-1684] fixed colors in the contrast theme

--- a/sass/stylesheets/sass/hc-dark.scss
+++ b/sass/stylesheets/sass/hc-dark.scss
@@ -1434,3 +1434,16 @@ td.inactive-bg {
 .btn-undo.is-focused {
 	box-shadow: 0 1px 0px $blue, 0 -1px 0px $blue;
 }
+
+// Dashboard list table.
+.dashboard-list {
+	.dashboard-list-item {
+		.status-green,
+		.status-grey,
+		.status-yellow {
+			background-color: #e0e0e0;
+			border-color: #e0e0e0;
+		}
+
+	}
+}
